Fix wrong padding-left on whole module

--- a/_dev/src/assets/scss/base/_reset.scss
+++ b/_dev/src/assets/scss/base/_reset.scss
@@ -42,8 +42,6 @@
 
 @media screen and (min-width: 1024px) {
   & > *:not(.nav) {
-    padding-right: 10px;
-    padding-left: 20px;
   }
 }
 
